--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>vr-demo-vue</name>
+	<name>VR-VUE</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,16 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1513655095784</id>
+			<id>0</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-node_modules</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>0</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
